examples/good/05-even_more_functions.ez
typicalLambda : Integer -> Integer -> Integer;
typicalLambda x = lambda: y -> x + y;

massacreAnIntegerFunction: (Integer -> Integer) -> (Integer -> Integer);
massacreAnIntegerFunction f = lambda: x -> f (f x);

suprisingPartialApplication : (Integer -> Integer -> Integer) -> Integer -> Integer -> Integer;
suprisingPartialApplication f x = f (x + 1); 

main : Bool;
main = (suprisingPartialApplication (lambda: x y -> x * y)) 2 3 == 9;

;) Maybe in the future
 - haskell-like operators (.) & ($)

complexFunction : (Integer -> Integer) -> (Integer -> Integer);
complexFunction = massacreAnIntegerFunction . massacreAnIntegerFunction . massacreAnIntegerFunction;
(;
