examples/bad/too_few_args.ez
f : Integer -> Integer -> Integer;
f x y = x + y;

main : Integer;
main = f 1;